force-app/main/default/objects/FD_Certificate__c/FD_Certificate__c.object-meta.xml
<CustomObject>
    <description>Food and drink compliance certificate held by a supplier Account.</description>
    <label>F&amp;D Certificate</label>
    <nameField>
        <displayFormat>CERT-{00000}</displayFormat>
        <label>Certificate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F&amp;D Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>