force-app/main/default/objects/FD_Certificate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Supplier Account that holds this certificate.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>F&amp;D Certificates</relationshipLabel>
    <relationshipName>FD_Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>