force-app/main/default/objects/FD_Certificate__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>