force-app/main/default/objects/FD_Certificate__c/fields/External_Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>External_Certificate_No__c</fullName>
    <label>External Certificate No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>