force-app/main/default/objects/FD_Certificate__c/validationRules/Expiry_After_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_After_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>Expiry_Date__c &lt; Issue_Date__c</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiry Date must be on or after Issue Date.</errorMessage>
</ValidationRule>